
  C H A N G E S 
 ===============

This file contains a list of all changes to the Albert OS.

Mar 11th 2008
 - implemented more Albert SO functions
 - added code to call the emulator from within Albert code
 
Mar 10th 2008
 - fixed project files for MSWindows / VisualC 8
 - updated project files for OS X / XCode
 
Mar 5th 2008
 - added code to access Einstein RAM (no MMU handling yet)
 - added macros to support class member access under Einstein and AlbertOS
 - added more sample implementations

Feb 29th 2008
 - initial release of Albert
 - added Albert interface into Einstein
 - added native FixedMultiply() function
