@@ -1,5 +1,5 @@
 // ==============================
-// File:                        sys/types.h
+// File:                        objects/objects.h
 // Project:                     Albert
 //
 // Copyright 2003-2008 by Matthias Melcher (albert@matthiasm.com).
@@ -21,32 +21,28 @@
 // $Id$
 // ==============================
 
-#ifndef ALBERT_SYS_TYPES_H
-#define ALBERT_SYS_TYPES_H
+#ifndef ALBERT_OBJECTS_OBJECTS_H
+#define ALBERT_OBJECTS_OBJECTS_H
 
 #include <K/Defines/KDefinitions.h>
+#include <Albert/sys/types.h>
 
 
 namespace Albert {
 
-  /* FIXME
-   * Currently this is a loose collection of typedefs that is created as we go.
-   * At som point, we must weed this out and create proper Albert OS code.
-   */
-  
-  typedef KSInt32 ObjectId;
-  typedef KSInt32 Fixed;
-  typedef KUInt32 BOOL;
-  typedef KUInt32 ULong;
-  
-  typedef KUInt32 GetScavengeProcPtr; // FIXME
-  
-  typedef void (*DestructorProcPtr)(void *, void *);
-  typedef KUInt32 (*MonitorProcPtr)(void *, int, void *);
-  
+  const KUInt32 kMonitorType = 0x0a;
+
+  const KUInt32 kBuiltInSMemMsgId = 1;
+  const KUInt32 kBuiltInSMemId = 2;
+  const KUInt32 kBuiltInSMemMonitorFaultId = 3;
+
+  extern ObjectId LocalToGlobalId(ObjectId);
+
+  inline KUInt32 ObjectType(ObjectId id) { return (id & 0x0f); }
+
 } // namespace
 
 
 #endif
-// ALBERT_SYS_TYPES_H
+// ALBERT_OBJECTS_OBJECTS_H
 
